feat: New Gen aesthetic upgrade - Sticky CTA, Vibe Tags, and Noise

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;1,400&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
 </head>
 
@@ -28,8 +28,20 @@
         </div>
     </nav>
 
+    <div class="sticky-cta-bar" id="sticky-bar">
+        <span>Connect deeply. No noise.</span>
+        <a href="https://apps.apple.com/us/app/chityap/id6757008313" class="btn-download pulse-btn">Get the App</a>
+    </div>
+
     <header class="hero">
+        <!-- New Gen: Gradient Orbs -->
+        <div class="gradient-orb orb-1"></div>
+        <div class="gradient-orb orb-2"></div>
+
         <div class="hero-content fade-in-up">
+            <div class="social-proof-badge">
+                #1 Social App for Real Friends
+            </div>
             <h1>Connect deeply.<br>Scroll less.</h1>
             <p class="subtitle">A social space designed for humans, not engagement metrics. No algorithms, no infinite
                 feeds, just real connection.</p>
@@ -37,9 +49,15 @@
                 <a href="https://apps.apple.com/us/app/chityap/id6757008313" class="btn-primary">Download on App
                     Store</a>
             </div>
-            <p class="micro-copy">Available on iPhone. Android coming soon.</p>
+            <p class="micro-copy" style="font-family: 'Space Mono', monospace;">Available on iPhone. Android coming
+                soon.</p>
         </div>
         <div class="hero-visual fade-in-delayed">
+            <!-- Integrated "Vibe Tags" (Stickers) -->
+            <div class="vibe-tag tag-1">No Algorithms 🚫</div>
+            <div class="vibe-tag tag-2">Just Friends 🧡</div>
+            <div class="vibe-tag tag-3">No Ads 🛡️</div>
+
             <!-- 
                 Image Requirement 1: Hero Visual (Chitty Mascot)
             -->
