--- a/privacy.html
+++ b/privacy.html
@@ -52,7 +52,7 @@
 <body>
     <nav class="navbar fade-in">
         <a href="index.html" class="logo-wrapper">
-            <img src="assets/logo.png" alt="ChitYap App Icon" class="nav-logo">
+            <img src="assets/logo-new.jpg" alt="ChitYap App Icon" class="nav-logo">
             <span class="logo">ChitYap</span>
         </a>
         <div class="nav-links">
