--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar">
         <a href="#" class="logo-wrapper">
-            <img src="assets/logo.png" alt="ChitYap App Icon" class="nav-logo">
+            <img src="assets/chityap-logo.jpg" alt="ChitYap App Icon" class="nav-logo">
             <span class="logo">ChitYap</span>
         </a>
         <div class="nav-links">
