Fix 'View All' button scroll behavior

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="feed-header">
                 <h2>Explore Challenges</h2>
-                <a href="#" class="view-all">View All</a>
+                <a href="#challenge-list" class="view-all">View All</a>
             </div>
 
             <div class="app-showcase fade-in-up">
@@ -52,7 +52,7 @@
                 </div>
             </div>
 
-            <div class="challenges-scroll-container">
+            <div id="challenge-list" class="challenges-scroll-container">
                 <!-- Challenge Card 1 -->
                 <div class="challenge-card">
                     <h3>7-Day No Sugar</h3>
